# SpisaLoveO

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 457fdd20c53c_initial_migration.py  9637a1105cea_init.py
src/spisa_love_o/: config.py  di.py  main.py
src/spisa_love_o/components/: fast_api_app.py  injectable.py  log.py  register_modules.py
src/spisa_love_o/components/database/relation/: async_database.py
src/spisa_love_o/components/enums/: http_methods.py  response_statuses.py
src/spisa_love_o/components/exceptions/: __init__.py  bad_request_exception.py  forbidden_exception.py  infrastructure_exception.py  internal_server_exception.py  not_authorized_exception.py  not_found_exception.py
src/spisa_love_o/components/exceptions/abstract/: __init__.py  abstract_application_exception.py
src/spisa_love_o/components/exceptions/db/: __init__.py  unique_constraint_violation_error.py
src/spisa_love_o/components/middlewares/: error.py
src/spisa_love_o/components/mixins/: logger.py
src/spisa_love_o/components/routers/: base.py
src/spisa_love_o/dto/base/: response.py
src/spisa_love_o/dto/error/: http_exception.py  not_authorized.py
src/spisa_love_o/models/: base.py  faculty.py  institution.py  models.py  product.py  product_access.py  product_faculty.py  product_file.py  product_institution.py  product_specialty.py  product_subject.py  review.py  speciality.py  subject.py  subject_speciality.py  user.py
src/spisa_love_o/repositories/: base.py
src/spisa_love_o/services/: base.py
